--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
         <meta name="description" content="The portfolio of Denise Chandler web deverloper">
         <meta name="keywords" content="milan ilic, web, website, websites, web deverlopment, freelance, responsive, mobile, development, responsive development, web development, unique, fun, developer, typography, affordable, small business, personal, blog, portfolio">        
-        <link rel="shortcut icon" type="image/png" href="images/logoMini7.png"/>
+        <link rel="shortcut icon" type="image/png" href="images/logoMini.png"/>
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     
@@ -15,7 +15,9 @@
             <!-- PRVI DEO -->
             <div class="one">
                 <div class="menu">
-                    <img class="menuIcon" src="images/menu.png">
+                    <div class="menuDiv"></div>
+                    <div class="menuDiv"></div>
+                    <div class="menuDiv"></div>
                 </div>
                 <div class="divLogo">
                     <img class="logo" src="images/logo.png">
