--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         <section class="four" id="fourContact">
             <h2 id="contactDugme">Contact Me</h2>
             <h4>Contact me today, and get reply with in 24 hours!</h4>
+            
+            <h4 class="h4class">Email has been sent</h4>
+            
             <div class="forma">
                 <form id="contactForm">
                     <fieldset>
@@ -120,7 +123,7 @@
                         <textarea placeholder="Type your message here" name="message" tabindex="4" required></textarea>
                     </fieldset>
                     <a class="noneA" href="mailto:markopolo9899@gmail.com">
-                        <button>Submit</button>
+                        Submit
                     </a>
                 </form>              
             </div>
