--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <h4 id="h4cls"></h4>
             
             <div class="forma">
-                <form id="contactForm" action="contactForm.php" method="post">
+                <form id="contactForm" action="php/contactForm.php" method="post">
                     <fieldset>
                         <input type="text" name="name" placeholder="Your name" tabindex="1" required>
                     </fieldset>
